# my-ym2612-plugin

./: .gitignore  CMakeLists.txt  README.md  build.bat  build.sh  patchtest.cpp  patchtest.sh
.github/: CI_README.md
.github/workflows/: build-macos.yml  build-windows.yml
Source/: AlgorithmSelector.h  BuiltInPatches.h  FurnaceFormat.h  MidiKeyboardComponent.h  OscilloscopeDisplay.h  PatchSerializer.h  PatchesPanel.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  SettingsPanel.h  SsgEgSelector.h  SynthSound.h  SynthVoice.h  Ym2612Voice.h
Source/mame/: mame_ym2612fm.c  mame_ym2612fm.h  mamedef.h
